Changes in lmfit-4.1

- improved text messages ("success" -> "converged", we should not say more)
- configure now supports pkg-config
- reworked examples:
  - new example nonlin1: solution of 2 nonlinear equations in 2 variables
  - example surface1 improved and included in man page lmmin(3)
- directory test now contains functional testsuite

Changes in lmfit-4.0, released 16jul13

- binary library renamed: lmmin -> lmfit
- API changes:
  - lmcurve.h no longer depends on lmmin.h, but only on new lmstruct.h
  - low-level API lmdif is removed (code integrated in lmmin)
  - lmcurve_fit -> lmcurve
  - new control parameter 'pivot' (default: pivoting is used, as before)
  - new structure lm_princon_struct, generalizing printflags
  - in consequence thereof, new parameter lists for lmcurve and lmmin
- code cleanup:
  - ensure strict C90 compliance: no C++ comments; replace non-standard
    struct assignement (reported by Elio Mazzocca, using LCC)
  - revert malloc trick of release 3.4 (readability is more important)
  - source code comment blocks moved around, to reduce duplications
- build scripts cleanup:
  - demo programs are no longer installed to $bindir
  - configure.ac: cleaned up, and inserted comments
- documentation:
  - new web location: apps.jcns.fz-juelich.de/lmfit
  - new entry page (dokuwiki) instead of man page
  - man page split and largely rewritten: lmcurve(3), lmmin(3)

Changes in lmfit-3.5, released 3feb13

- changed overall license to FreeBSD to facilitate inclusion in Linux
  distributions (request by M. Hroncok)
- directory doc renamed man

Changes in lmfit-3.4, released 21jan13

- only one malloc call to allocate all arrays (proposal by F. Polchow)
- liblmmin_la_LDFLAGS += -lm (required by Ubuntu, report by J. M. Agosta)
- there is now an alternative ruby binding, using inline instead of swig
  (contribution by I. Drozdov)
- long message for degenerate case now suggests increasing epsilon
  (suggestion by Nghia Ho)
